--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "vite": "^4.3.9"
   },
   "dependencies": {
-    "dompurify": "^3.0.3"
+    "dompurify": "^3.0.3",
+    "dotenv": "^16.3.1",
+    "node-fetch": "^3.3.1"
   }
 }
